Config: This patch enables debug capablity using traces
Signed-off-by: Dharageswari R <dharageswari.r@intel.com>
Change-Id: I049d76e574e2bf16b11f69c7edd8b699022dec6e

--- a/chromeos/config/x86_64/chromeos-intel-pineview.flavour.config
+++ b/chromeos/config/x86_64/chromeos-intel-pineview.flavour.config
@@ -95,6 +95,9 @@ CONFIG_SND_SOC_SOF_INTEL_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_JASPERLAKE_SUPPORT=y
 CONFIG_SND_SOC_SOF_PCI=m
 CONFIG_SND_SOC_SOF_TIGERLAKE_SUPPORT=y
+CONFIG_SND_SOC_SOF_DEBUG=y
+CONFIG_SND_SOC_SOF_DEBUG_ENABLE_FIRMWARE_TRACE=y
+CONFIG_SND_SOC_SOF_DEVELOPER_SUPPORT=y
 CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_TS3A227E=y
 CONFIG_SND_SST_ATOM_HIFI2_PLATFORM_ACPI=m
